@@ -36,7 +36,6 @@ ADD new feature
 #000007 ADD [ ] DCOP (q: should KPart implement DCOP or shell app only?)
 #000008 ADD [ ] install mime-type handlers for .opml feed lists
 #000019 ADD [ ] implement tooltips and What's This? help
-#000044 ADD [ ] show an error favicon if feed could not be fetched -->smt
 
 == MID-TERM ==
 
